--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,14 +12,17 @@
         <span></span>
         <span></span>
         <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
       </div>
       <div class="container py-lg-md d-flex">
         <div class="col px-0">
           <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-12">
               <h1 class="display-2  text-white">Virtual Bridge
-                <span>between Job seekers, project developers and clients</span>
-                
+                <span>between <br>Job seekers, project developers and clients</span>
+
               </h1>
             </div>
           </div>
@@ -112,8 +115,7 @@
               the gateway or the one-stop service and solution provider – a most unique platform for upcoming projects
               and the end solution to staffing requirements.</p>
             <div class="btn-wrapper">
-              <a href="#"
-                class="btn btn-info btn-icon mb-3 mb-sm-0">
+              <a href="#" class="btn btn-info btn-icon mb-3 mb-sm-0">
                 <span class="btn-inner--icon"><i class="fa fa-info-circle"></i></span>
                 <span class="btn-inner--text">About Us</span>
               </a>
