Added animations and font changes. Might have some redundant changed from assets

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -20,16 +20,16 @@
     </section>
     <section class="section">
         <div class="container">
-            <div class="card card-profile shadow mt--300">
+            <div data-aos="zoom-out"  class="card card-profile shadow mt--300">
                 <div class="px-4">
                     <br>
-                    <div class="row justify-content-center">
+                    <div class="row ns-header justify-content-center">
                         <h3>About Us</h3>
                     </div>
-                    <div class="mt-5 border-top text-center">
+                    <div class="mt-2 border-top text-left">
                         <div class="row justify-content-center">
-                            <div class="col-lg-9">
-                                <p>NascentTechnologies is like the virtual bridge between job seekers, project
+                            <div class="mt-3 mb-5 col-lg-9">
+                                <p class="ns-fs-11">NascentTechnologies is like the virtual bridge between job seekers, project
                                     developers and clients, providing them with end-to-end solutions; with a team of
                                     qualified, experienced and like-minded people with a “Vision and Mission” to achieve
                                     a common goal by delivering niche support and services in the field of IT and Non-IT
