--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -10,13 +10,19 @@
     margin-left: 30px !important;
 }
 
-.navbar-nav .nav-link .nav-link-inner--text {
-    margin-left: 0rem !important;
+.navbar-nav .nav-link {
+    font-family: 'Poiret One', sans-serif !important;
+    font-weight: bolder;
+    letter-spacing: 0.05em;
+    .nav-link-inner--text {
+        margin-left: 0rem !important;
+    }
 }
 
-.navbar-brand  {
+.navbar-brand {
     font-size: 18px;
     letter-spacing: 0.2em;
-    font-weight: 350 !important;
+    font-weight: bolder !important;
     color: white;
+    font-family: 'Poiret One', sans-serif;
 }
