Added contact-us page

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,26 +1,22 @@
 <main class="profile-page">
-    <section class="section-profile-cover section-shaped my-0" style="height: 450px;">
-        <!-- Circles background -->
-        <div class="shape shape-style-1 shape-primary alpha-4">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-        <!-- SVG separator -->
-        <div class="separator separator-bottom separator-skew">
-            <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1"
-                xmlns="http://www.w3.org/2000/svg">
-                <polygon class="fill-white" points="2560 0 2560 100 0 100"></polygon>
-            </svg>
-        </div>
-    </section>
-    <section class="section">
+    <div class="position-relative">
+        <!-- shape Hero -->
+        <section class="section section-lg section-shaped pb-250">
+            <div class="shape shape-style-1 shape-primary"
+                style="filter: brightness(0.5);background-image: url('assets/img/theme/nsc-tech-serv1.jpg');background-size: cover; background-position: center center;">
+            </div>
+            <!-- SVG separator -->
+            <div class="separator separator-bottom separator-skew">
+                <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <polygon class="fill-white" points="2560 0 2560 100 0 100"></polygon>
+                </svg>
+            </div>
+        </section>
+    </div>
+    <section class="section mt-lg-xl">
         <div class="container">
-            <div data-aos="zoom-out"  class="card card-profile shadow mt--300">
+            <div data-aos="zoom-out" class="card card-profile shadow mt--300">
                 <div class="px-4">
                     <br>
                     <div class="row ns-header justify-content-center">
@@ -29,7 +25,8 @@
                     <div class="mt-2 border-top text-left">
                         <div class="row justify-content-center">
                             <div class="mt-3 mb-5 col-lg-9">
-                                <p class="ns-fs-11">NascentTechnologies is like the virtual bridge between job seekers, project
+                                <p class="ns-fs-11">NascentTechnologies is like the virtual bridge between job seekers,
+                                    project
                                     developers and clients, providing them with end-to-end solutions; with a team of
                                     qualified, experienced and like-minded people with a “Vision and Mission” to achieve
                                     a common goal by delivering niche support and services in the field of IT and Non-IT
