--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -59,7 +59,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link no-caret" role="button">
+          <a class="nav-link no-caret" role="button" [routerLink]="['/contact-us']">
             <i class="ni ni-collection d-lg-none"></i>
             <span class="nav-link-inner--text">Contact Us</span>
           </a>
