--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -14,26 +14,58 @@
             </div>
         </section>
     </div>
-    <section class="section mt-lg-xl">
+    <section class="section section-lg pt-lg-0 mt--200">
         <div class="container">
-            <div data-aos="zoom-out" class="card card-profile shadow mt--300">
-                <div class="px-4">
-                    <br>
-                    <div class="row ns-header justify-content-center">
-                        <h3>About Us</h3>
-                    </div>
-                    <div class="mt-2 border-top text-left">
-                        <div class="row justify-content-center">
-                            <div class="mt-3 mb-5 col-lg-9">
-                                <p class="ns-fs-11">NascentTechnologies is like the virtual bridge between job seekers,
-                                    project
-                                    developers and clients, providing them with end-to-end solutions; with a team of
-                                    qualified, experienced and like-minded people with a “Vision and Mission” to achieve
-                                    a common goal by delivering niche support and services in the field of IT and Non-IT
-                                    having a back-up team of equally qualified and efficient Developers, Programmers,
-                                    Strategic Planners who invest their entire knowledge and resources in understanding
-                                    the ever growing trends and area to area economic development and help create a
-                                    bridge to satisfy the demands of our Clients globally..</p>
+            <div class="row justify-content-center">
+                <div class="col-lg-12">
+                    <div class="row row-grid">
+                        <div data-aos="zoom-out" class="col-lg-12">
+                            <div class="card card-lift--hover shadow border-0">
+                                <div class="card-header">
+                                    <h2 class="text-primary justify-content-center">About Us </h2>
+                                </div>
+                                <div class="card-body">
+                                    <p class="ns-fs-11 description mt-3"><b class="font-weight-bold">
+                                            NascentTechnologies </b>is like
+                                        the virtual bridge
+                                        between job seekers,
+                                        project
+                                        developers and clients, providing them with end-to-end solutions; with a team of
+                                        qualified, experienced and like-minded people with a “Vision and Mission” to
+                                        achieve
+                                        a common goal by delivering niche support and services in the field of IT and
+                                        Non-IT
+                                        having a back-up team of equally qualified and efficient Developers,
+                                        Programmers,
+                                        Strategic Planners who invest their entire knowledge and resources in
+                                        understanding
+                                        the ever growing trends and area to area economic development and help create a
+                                        bridge to satisfy the demands of our Clients globally</p>
+                                    <p class="ns-fs-11 description mt-3"><b class="font-weight-bold">
+                                            NascentTechnologies </b>understands the business
+                                        needs and believe that every need is
+                                        Unique and therefore, bear in mind all the objectives or our Clients that should
+                                        be fulfilled in a very methodical process, eliminating chances of doubts or
+                                        failures. Immaterial of the size of the Client or Company, we extend all our
+                                        skill sets to build a strong long term relationship with them. In other words,
+                                        NascentTechnologies tends to act as extended arms of Clients in their Planning,
+                                        Projects, etc.</p>
+                                    <p class="ns-fs-11 description mt-3">With the kind of team that <b
+                                            class="font-weight-bold">NascentTechnologies </b>has and the capacity to
+                                        deliver
+                                        and consider every job assigned to us as though it is something that we
+                                        ourselves wanted to do. Proper practices, firm decision making and timely action
+                                        gives us the upper hand to cater to the needs of the clients, in addition to our
+                                        relationship, understanding and support by providing various zones of services
+                                        to them.</p>
+                                    <p class="ns-fs-11 description mt-3"><b
+                                            class="font-weight-bold">NascentTechnologies</b> does understand the dynamic
+                                        and never ending changes taking
+                                        place in the business scenario globally with the life span of technologies
+                                        rapidly reducing and new technologies emerging at an even more rapid pace. This
+                                        is where our expertise and experience plays the role in ensuring that
+                                        NascentTechnologies would be the right asset to the clients.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
