--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -14,63 +14,73 @@
             </div>
         </section>
     </div>
-    <section class="section section-lg section-contact-us mt-lg-xl">
-        <div class="container">
-            <div data-aos="zoom-out" class="row justify-content-center mt--300">
-                <div class="col-lg-12">
-                    <div class="card card-lift--hover shadow-lg">
-                        <div class="card-body p-lg-5">
-                            <h2 class="mb-1">Get In Touch!</h2>
-                            <h4 class="mt-0">We are looking forward to start a project with you!</h4>
-                            <p class="mt-3 ns-fs-11">Our offshore staffing model allows you to choose between “managing
-                                your resources
-                                by yourself or letting us do it for you,” either way, in this model, our consultants
-                                work for you from
-                                our
-                                office. Recommended for projects with well-defined goals and deliverables, our offshore
-                                staffing model
-                                optimizes cost while providing state-of-the-art services through our offshore
-                                development facilities.
-                            </p>
-                            <span></span>
-                            <span></span>
-                            <div class="row ns-info">
-                                <div class="col-lg-6 ns-col">
-                                    <div
-                                        class="icon icon-lg icon-shape bg-gradient-white shadow rounded-circle text-primary">
-                                        <i class="ni ni-align-left-2 text-primary"></i>
-                                    </div>
-                                    <h5 class="mt-3">Address</h5>
-                                    <p class="mt-3">5900 Balcones Dr. STE 5345, Austin, TX 78731 Nascent Address</p>
-                                </div>
-                                <div class="col-lg-6 ns-col">
-                                    <div
-                                        class="icon icon-lg icon-shape bg-gradient-white shadow rounded-circle text-primary">
-                                        <i class="ni ni-badge text-primary"></i>
-                                    </div>
-                                    <h5 class="mt-3">Phone</h5>
-                                    <p class="mt-3">+1 (214) 937-4595</p>
-                                </div>
-                            </div>
-                            <div class="row ns-info">
-                                <div class="col-lg-6 ns-col">
-                                    <div
-                                        class="icon icon-lg icon-shape bg-gradient-white shadow rounded-circle text-primary">
-                                        <i class="ni ni-time-alarm text-primary"></i>
-                                    </div>
-                                    <h5 class="mt-3">Business Hours</h5>
-                                    <p class="mt-3">Mon – Fri – 9 am – 5 pm Sat, Sun – Closed</p>
-                                </div>
-                                <div class="col-lg-6 ns-col">
-                                    <div
-                                        class="icon icon-lg icon-shape bg-gradient-white shadow rounded-circle text-primary">
-                                        <i class="ni ni-email-83 text-primary"></i>
-                                    </div>
-                                    <h5 class="mt-3">Email</h5>
-                                    <p class="mt-3">hr@nascenttechnologiesinc.com</p>
-                                </div>
-                            </div>
 
+    <section class="section section-lg pt-lg-0 mt--200">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-12">
+                    <div class="row row-grid">
+                        <div data-aos="zoom-out" class="col-lg-12">
+                            <div class="card card-lift--hover shadow border-0">
+                                <div class="card-header">
+                                    <h2 class="text-primary justify-content-center">Get In Touch! </h2>
+                                    <h4 class="mt-0">We are looking forward to start a project with you!</h4>
+                                </div>
+                                <div class="card-body">
+                                    <p class="mt-3 ns-fs-11">Our offshore staffing model allows you to choose between
+                                        “managing
+                                        your resources
+                                        by yourself or letting us do it for you,” either way, in this model, our
+                                        consultants
+                                        work for you from
+                                        our
+                                        office. Recommended for projects with well-defined goals and deliverables, our
+                                        offshore
+                                        staffing model
+                                        optimizes cost while providing state-of-the-art services through our offshore
+                                        development facilities.
+                                    </p>
+                                    <span></span>
+                                    <span></span>
+                                    <div class="row ns-info">
+                                        <div class="col-lg-6 ns-col text-center">
+                                            <div
+                                                class="icon icon-lg icon-shape bg-gradient-white shadow rounded-circle text-primary">
+                                                <i class="ni ni-align-left-2 text-primary"></i>
+                                            </div>
+                                            <h5 class="mt-3">Address</h5>
+                                            <p class="mt-3">5900 Balcones Dr. STE 5345, Austin, TX 78731 Nascent Address
+                                            </p>
+                                        </div>
+                                        <div class="col-lg-6 ns-col text-center">
+                                            <div
+                                                class="icon icon-lg icon-shape bg-gradient-white shadow rounded-circle text-primary">
+                                                <i class="ni ni-badge text-primary"></i>
+                                            </div>
+                                            <h5 class="mt-3">Phone</h5>
+                                            <p class="mt-3">+1 (214) 937-4595</p>
+                                        </div>
+                                    </div>
+                                    <div class="row ns-info">
+                                        <div class="col-lg-6 ns-col text-center">
+                                            <div
+                                                class="icon icon-lg icon-shape bg-gradient-white shadow rounded-circle text-primary">
+                                                <i class="ni ni-time-alarm text-primary"></i>
+                                            </div>
+                                            <h5 class="mt-3">Business Hours</h5>
+                                            <p class="mt-3">Mon – Fri – 9 am – 5 pm Sat, Sun – Closed</p>
+                                        </div>
+                                        <div class="col-lg-6 ns-col text-center">
+                                            <div
+                                                class="icon icon-lg icon-shape bg-gradient-white shadow rounded-circle text-primary">
+                                                <i class="ni ni-email-83 text-primary"></i>
+                                            </div>
+                                            <h5 class="mt-3">Email</h5>
+                                            <p class="mt-3">hr@nascenttechnologiesinc.com</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
