--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -41,10 +41,10 @@
         <div class="col-lg-12">
           <div class="row row-grid">
             <div data-aos="fade-up-right" data-aos-duration="1000" class="col-lg-4">
-              <div class="card card-lift--hover shadow border-0">
+              <div class="card card-lift--hover shadow border-0 height-100">
                 <div class="card-body py-5">
                   <div class="icon icon-shape icon-shape-primary rounded-circle mb-4">
-                    <i class="ni ni-settings-gear-65"></i>
+                    <i class="fa fa-briefcase"></i>
                   </div>
                   <h6 class="text-primary text-uppercase">Services</h6>
                   <p class="ns-fs-11 description mt-3">With the right services NascentTechnologies provides advantages
@@ -55,10 +55,10 @@
               </div>
             </div>
             <div data-aos="fade-up" data-aos-duration="1000" class="col-lg-4">
-              <div class="card card-lift--hover shadow border-0">
+              <div class="card card-lift--hover shadow border-0 height-100">
                 <div class="card-body py-5">
                   <div class="icon icon-shape icon-shape-success rounded-circle mb-4">
-                    <i class="ni ni-app"></i>
+                    <i class="fa fa-briefcase"></i>
                   </div>
                   <h6 class="text-success text-uppercase">Projects</h6>
                   <p class="ns-fs-11 description mt-3">NascentTechnologies undertakes Projects from the clients both on
@@ -69,10 +69,10 @@
               </div>
             </div>
             <div data-aos="fade-up-left" data-aos-duration="1000" class="col-lg-4">
-              <div class="card card-lift--hover shadow border-0">
+              <div class="card card-lift--hover shadow border-0 height-100">
                 <div class="card-body py-5">
                   <div class="icon icon-shape icon-shape-warning rounded-circle mb-4">
-                    <i class="ni ni-chart-pie-35"></i>
+                    <i class="fa fa-life-ring"></i>
                   </div>
                   <h6 class="text-warning text-uppercase">Supports</h6>
                   <p class="ns-fs-11 description mt-3">NascentTechnologies provides its clients full-time support in
@@ -116,7 +116,7 @@
               and the end solution to staffing requirements.</p>
             <div class="btn-wrapper">
               <a href="#" class="btn btn-info btn-icon mb-3 mb-sm-0">
-                <span class="btn-inner--icon"><i class="fa fa-info-circle"></i></span>
+                <span class="btn-inner--icon"><i class="fa fa-info-circle fa-lg"></i></span>
                 <span class="btn-inner--text">About Us</span>
               </a>
             </div>
@@ -138,7 +138,7 @@
           <div class="d-flex px-3">
             <div>
               <div class="icon icon-lg icon-shape bg-gradient-white shadow rounded-circle text-primary">
-                <i class="ni ni-building text-primary"></i>
+                <i class="fa fa-briefcase"></i>
               </div>
             </div>
             <div class="pl-4">
@@ -154,7 +154,7 @@
                 <div class="d-flex px-3">
                   <div>
                     <div class="icon icon-shape bg-gradient-success rounded-circle text-white">
-                      <i class="ni ni-settings-gear-65"></i>
+                      <i class="fa fa-cogs"></i>
                     </div>
                   </div>
                   <div class="pl-4">
@@ -176,7 +176,7 @@
                 <div class="d-flex px-3">
                   <div>
                     <div class="icon icon-shape bg-gradient-warning rounded-circle text-white">
-                      <i class="ni ni-settings-gear-65"></i>
+                      <i class="fa fa-puzzle-piece"></i>
                     </div>
                   </div>
                   <div class="pl-4">
@@ -199,7 +199,7 @@
                 <div class="d-flex px-3">
                   <div>
                     <div class="icon icon-shape bg-gradient-warning rounded-circle text-white">
-                      <i class="ni ni-settings-gear-65"></i>
+                      <i class="fa fa-exchange"></i>
                     </div>
                   </div>
                   <div class="pl-4">
@@ -222,7 +222,7 @@
                 <div class="d-flex px-3">
                   <div>
                     <div class="icon icon-shape bg-gradient-warning rounded-circle text-white">
-                      <i class="ni ni-settings-gear-65"></i>
+                      <i class="fa fa-desktop"></i>
                     </div>
                   </div>
                   <div class="pl-4">
@@ -262,7 +262,7 @@
         <div class="col-md-6 order-md-1">
           <div class="pr-md-5">
             <div class="icon icon-lg icon-shape icon-shape-success shadow rounded-circle mb-5">
-              <i class="ni ni-settings-gear-65"></i>
+              <i class="fa fa-life-ring"></i>
             </div>
             <h3>Supports</h3>
             <p class="ns-fs-11">An activity required for successful execution of a product or program or process is
@@ -338,7 +338,7 @@
       <div class="row row-grid mt-5">
         <div data-aos="zoom-out" data-aos-delay="100" class="col-lg-4">
           <div class="icon icon-lg icon-shape bg-gradient-white shadow rounded-circle text-primary">
-            <i class="ni ni-badge text-primary"></i>
+            <i class="fa fa-briefcase"></i>
           </div>
           <h5 class="text-white mt-3">Fulltime hire</h5>
           <p class="text-white mt-3">Full time hire means a direct job offer to a candidate from the intending client
@@ -350,7 +350,7 @@
         </div>
         <div data-aos="zoom-out" data-aos-delay="250" class="col-lg-4">
           <div class="icon icon-lg icon-shape bg-gradient-white shadow rounded-circle text-primary">
-            <i class="ni ni-badge text-primary"></i>
+            <i class="fa fa-file-text-o"></i>
           </div>
           <h5 class="text-white mt-3">Contract to hire</h5>
           <p class="text-white mt-3">Contract-to-Hire Services Our contract-to-hire services (also sometimes referred to
@@ -362,7 +362,7 @@
         </div>
         <div data-aos="zoom-out" data-aos-delay="350" class="col-lg-4">
           <div class="icon icon-lg icon-shape bg-gradient-white shadow rounded-circle text-primary">
-            <i class="ni ni-badge text-primary"></i>
+            <i class="fa fa-clock-o"></i>
           </div>
           <h5 class="text-white mt-3">Temp hire</h5>
           <p class="text-white mt-3">Our Temp-to-Hire Program lets you bring a selected candidate into your work
@@ -374,7 +374,7 @@
       <div data-aos="zoom-out" class="row row-grid mt-5">
         <div class="col-lg-4">
           <div class="icon icon-lg icon-shape bg-gradient-white shadow rounded-circle text-primary">
-            <i class="ni ni-badge text-primary"></i>
+            <i class="fa fa-globe"></i>
           </div>
           <h5 class="text-white mt-3">Offshore hire</h5>
           <p class="text-white mt-3">Our offshore staffing model allows you to choose between “managing your resources
@@ -467,7 +467,7 @@
               <div class="row align-items-center" style="padding-bottom: 30px;">
                 <div class="col-lg-3">
                   <div class="icon icon-lg icon-shape bg-gradient-white shadow rounded-circle text-primary">
-                    <i class="ni ni-email-83 text-primary"></i>
+                    <i class="fa fa-user"></i>
                   </div>
                 </div>
                 <div class="col-lg-9">
@@ -478,7 +478,7 @@
               <div class="row align-items-center" style="padding-bottom: 30px;">
                 <div class="col-lg-3">
                   <div class="icon icon-lg icon-shape bg-gradient-white shadow rounded-circle text-primary">
-                    <i class="ni ni-email-83 text-primary"></i>
+                    <i class="fa fa-check-circle"></i>
                   </div>
                 </div>
                 <div class="col-lg-9">
@@ -489,7 +489,7 @@
               <div class="row align-items-center" style="padding-bottom: 30px;">
                 <div class="col-lg-3">
                   <div class="icon icon-lg icon-shape bg-gradient-white shadow rounded-circle text-primary">
-                    <i class="ni ni-email-83 text-primary"></i>
+                    <i class="fa fa-trophy"></i>
                   </div>
                 </div>
                 <div class="col-lg-9">
