--- a/src/styles.css
+++ b/src/styles.css
@@ -10,3 +10,11 @@ body {
 .ns-header {
     font-family: 'Mochiy Pop One', sans-serif;
 }
+
+.height-100 {
+    height: 100%;
+}
+
+.display-inline {
+    display: inline;
+}
