Added Our Portfolio page

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -54,7 +54,7 @@
             <span class="nav-link-inner--text">Our Catalogue</span>
           </a>
           <div class="dropdown-menu">
-            <a [routerLink]="['/landing']" class="shadow-lg--hover dropdown-item">Our Portfolio</a>
+            <a [routerLink]="['/our-portfolio']" class="shadow-lg--hover dropdown-item">Our Portfolio</a>
             <a [routerLink]="['/landing']" class="shadow-lg--hover dropdown-item">Our Jobs</a>
           </div>
         </li>
