Added it-consulting and gis services pages

--- a/src/app/our-portfolio/our-portfolio.component.html
+++ b/src/app/our-portfolio/our-portfolio.component.html
@@ -14,25 +14,30 @@
             </div>
         </section>
     </div>
-
-    <section class="section section-lg pt-lg-0 mt--50 pb-2">
+    <section class="section section-lg pt-lg-0 mt--200 pb-3">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-lg-10">
-                    <div class="row row-grid">
-                        <div data-aos="zoom-out" class="col-lg-12">
-                            <div class="card card-lift--hover shadow border-0">
-                                <div class="card-header">
-                                    <div>
-                                        <span
-                                            class="icon icon-shape bg-gradient-white rounded-circle text-primary">
-                                            <i class="fa fa-folder-open"></i>
-                                        </span>
-                                        <div class="header-icon-title">
-                                            <h2 class="display-3 text-primary pl-2">Our Portfolio</h2>
-                                        </div>
+                <div class="col-lg-12">
+                    <div data-aos="zoom-out" class="row row-grid">
+                        <div class="card card-lift--hover shadow border-0">
+                            <div class="card-header">
+                                <div>
+                                    <span class="icon icon-shape bg-gradient-white shadow rounded-circle text-primary">
+                                        <i class="fa fa-laptop"></i>
+                                    </span>
+                                    <div class="header-icon-title">
+                                        <h2 class="display-3 text-primary pl-2">Our Portfolio</h2>
                                     </div>
                                 </div>
+                                <h4 class="justify-content-center pt-3 pl-1">Exploring our creative journey and
+                                    exceptional work </h4>
+                            </div>
+                            <div class="card-body">
+                                <p class="ns-fs-11 description mt-3">Discover a showcase of our finest projects,
+                                    where creativity meets excellence. We take pride in every detail and strive
+                                    to exceed expectations, delivering solutions that leave a lasting
+                                    impression. Our portfolio reflects our passion for innovation and our
+                                    commitment to making a meaningful impact in the world</p>
                             </div>
                         </div>
                     </div>
@@ -44,7 +49,6 @@
     <section class="section section-lg pt-lg-0">
         <div class="container">
             <div class="row justify-content-center pt-3">
-                
                 <div *ngFor="let item of portfolioItems.slice(0, portfolioItems.length / 2); let i = index"
                     data-aos="zoom-in" class="row pt-3">
                     <div class="col-lg-6 pb-3">
