--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -37,9 +37,9 @@
             <span class="nav-link-inner--text">Services</span>
           </a>
           <div class="dropdown-menu">
-            <a [routerLink]="['/landing']" class="shadow-lg--hover dropdown-item">IT Consulting Services</a>
+            <a [routerLink]="['/it-consulting']" class="shadow-lg--hover dropdown-item">IT Consulting Services</a>
             <a [routerLink]="['/landing']" class="shadow-lg--hover dropdown-item">IT Project Services</a>
-            <a [routerLink]="['/landing']" class="shadow-lg--hover dropdown-item">GIS Services</a>
+            <a [routerLink]="['/gis-services']" class="shadow-lg--hover dropdown-item">GIS Services</a>
           </div>
         </li>
         <li class="nav-item">
