--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -22,7 +22,13 @@
                         <div data-aos="zoom-out" class="col-lg-12">
                             <div class="card card-lift--hover shadow border-0">
                                 <div class="card-header">
-                                    <h2 class="text-primary justify-content-center">About Us </h2>
+                                    <span class="icon icon-shape bg-gradient-white shadow rounded-circle text-primary">
+                                        <i class="fa fa-users"></i>
+                                    </span>
+                                    <div class="header-icon-title pl-3">
+                                        <h2 class="text-primary display-3 justify-content-center">About Us </h2>
+                                    </div>
+                                    <h4 class="mt-0 pt-3 pl-1">Passionate professionals driving innovation for a better world.</h4>
                                 </div>
                                 <div class="card-body">
                                     <p class="ns-fs-11 description mt-3"><b class="font-weight-bold">
