--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -23,8 +23,13 @@
                         <div data-aos="zoom-out" class="col-lg-12">
                             <div class="card card-lift--hover shadow border-0">
                                 <div class="card-header">
-                                    <h2 class="text-primary justify-content-center">Get In Touch! </h2>
-                                    <h4 class="mt-0">We are looking forward to start a project with you!</h4>
+                                    <span class="icon icon-shape bg-gradient-white shadow rounded-circle text-primary">
+                                        <i class="fa fa-envelope"></i>
+                                    </span>
+                                    <div class="header-icon-title  pl-3">
+                                        <h2 class="text-primary display-3 justify-content-center">Get In Touch! </h2>
+                                    </div>
+                                    <h4 class="mt-0 pt-3 pl-1">We are looking forward to start a project with you!</h4>
                                 </div>
                                 <div class="card-body">
                                     <p class="mt-3 ns-fs-11">Our offshore staffing model allows you to choose between
