--- a/src/app/support/support.component.html
+++ b/src/app/support/support.component.html
@@ -32,7 +32,7 @@
                                             <h2 class="display-3 text-primary pl-2">Tech Support</h2>
                                         </div>
                                     </div>
-                                    <h4 class="text-primary justify-content-center pt-3 pl-1">We Have the Tech Support
+                                    <h4 class="justify-content-center pt-3 pl-1">We Have the Tech Support
                                         Pros
                                         You Need </h4>
                                 </div>
